# SparseSolverEigen

./: CMakeLists.txt  README.md
include/: oscar.hpp  sparse_solver.hpp  types.hpp
src/: oscar.cpp  sparse_solve.cpp  sparse_solver.cpp
test/: fista_test.cpp  oscar_test.cpp
test/data/: A.emat  gA.emat  gxf.evec  gy.evec  xf.evec  y.evec
